examples/test/testpolicy6376.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6376
  namespace: namespace305
spec:
  podSelector:
    matchLabels:
      key44: value49
      key2: value5
      key9: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value23
          key12: value47
      podSelector:
        matchLabels:
          key41: value47
